# f3utils

./: .gitignore  Cargo.toml  README.md  config.toml  destroy.sh  template.yml
fngbot/: .api-gw-endpoint.txt  .bucket-name.txt  .function-name.txt  .gitignore  Makefile  deploy.sh  template.yml  view_submission_json.txt
fngbot/function/: .gitignore  Makefile  go.mod  go.sum  go.work  mailchimp.go  main.go  parse.go  ses.go  slack.go
fngbot/function/lib/debug/: debug.go  go.mod
function/: index.js
qsignup_report/: .gitignore  README.md  deploy.sh  template.yml
qsignup_report/function/: index.js  package.json
qsignup_report/html/: qsignup_report.html
src/: calendar.rs  fngbot.rs  main.rs
