[package]
name = "f3utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
ammonia = "3.3"
hex = "0.4"
hmac = "0.12"
lettre = "0.11"
mysql = "25.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { "version" = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
sha2 = "0.10.0"
time = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
